force-app/main/default/objects/HealthCloudGA__EhrPatientCareProvider__c/fields/HealthCloudGA__PractitionerName255__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__PractitionerName255__c</fullName>
    <label>Practitioner Name 255</label>
    <length>255</length>
    <type>Text</type>
</CustomField>