force-app/main/default/objects/HealthCloudGA__EhrPatientCareProvider__c/fields/HealthCloudGA__PractitionerName__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__PractitionerName__c</fullName>
    <label>Practitioner Name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>